GNOME Bugzilla – Bug 639730
discoverer: Validate timeouts before processing them
Last modified: 2011-01-17 23:52:35 UTC
This patch is required to ensure that timeouts we receive during async discovery are valid.
Created attachment 178480 [details] [review] discoverer: Validate timeouts before processing them This avoids a race where the timeout callback is scheduled to run but we get sufficient information to finish discovery before actually getting around to executing the callback. See the documentation of g_source_is_destroyed() for more details.
*** Bug 639729 has been marked as a duplicate of this bug. ***
commit 65a298fdeee5b9214f83878a6d757e90d45562cb Author: Arun Raghavan <arun.raghavan@collabora.co.uk> Date: Mon Jan 17 15:30:08 2011 +0530 discoverer: Validate timeouts before processing them This avoids a race where the timeout callback is scheduled to run but we get sufficient information to finish discovery before actually getting around to executing the callback. See the documentation of g_source_is_destroyed() for more details. https://bugzilla.gnome.org/show_bug.cgi?id=639730